# QMP-MCP

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CONTEXT.md  Dockerfile  LICENSE  README.md  biome.json  package-lock.json  package.json  policy.example.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
docs/: qemux-integration.md
docs/adr/: 0001-single-instance-lifecycle-orchestrator.md  0002-validated-hardware-spec.md  0003-hybrid-qmp-surface-command-policy.md  0004-instance-lifetime-no-persistence.md  0005-http-fail-closed-auth.md  0006-allowlisted-image-and-iso-stores.md  0007-purpose-built-image-baremetal-coequal.md  0008-unprivileged-auto-acceleration.md  0009-user-mode-networking-default.md  0010-qemux-viewer-variant.md  0011-rust-variant-rmcp.md  0012-parity-golden-fixtures.md  0013-derive-qemu-binary-from-machine.md  0014-guest-folder-sharing.md  0015-serial-console-ringbuf.md  0016-active-by-default-start.md
rust/: .dockerignore  Cargo.toml  Dockerfile  PLAN.md  README.md
rust/.cargo/: config.toml
rust/src/: config.rs  http.rs  lib.rs  logging.rs  main.rs  policy.rs  server.rs  viewer.rs
rust/src/instance/: event_buffer.rs  hardware_spec.rs  image_store.rs  iso_store.rs  mod.rs  orchestrator.rs  store_path.rs
rust/src/qemu/: driver.rs  mod.rs  qmp_client.rs  real_driver.rs
rust/tests/: argv_fixtures.rs  http_transport.rs  policy_fixtures.rs  real_qemu_tcg.rs  store_name_fixtures.rs
src/: config.test.ts  config.ts  env-example.test.ts  index.test.ts  index.ts  logger.ts
src/instance/: hardware-spec.test.ts  hardware-spec.ts  image-store.test.ts  image-store.ts  orchestrator.test.ts  orchestrator.ts  store-path.test.ts
src/policy/: command-policy.ts
src/qemu/: driver.ts  fake-driver.ts  qemu-integration.test.ts  real-driver.ts
src/tools/: create-image.ts  create-instance.ts  destroy-instance.ts  get-events.ts  get-status.ts  list-images.ts  list-isos.ts  query-cpus.ts  wait-for-event.ts
src/viewer/: viewer.test.ts  viewer.ts
test/: argv-parity.test.ts  policy-parity.test.ts  store-name-parity.test.ts
testdata/argv/: 01-minimal.json  02-accel-kvm.json  03-custom-machine-cpu-smp-mem.json  04-display-vnc.json  05-disk-virtio-qcow2.json  06-disk-ide-raw-readonly.json  07-disk-scsi.json  08-multiple-disks.json  09-cdrom-boot.json  10-boot-order-dc.json  11-net-user-portforwards.json  12-net-user-e1000.json  13-net-tap-hostnet.json  14-net-bridge-hostnet.json  15-extra-args.json  16-full.json  17-raspi3b-vnc-kernel-dtb.json  18-direct-kernel-boot-general.json  19-network-none.json  20-virt-display-virtio-gpu.json  21-share-9p.json  22-serial-ringbuf.json  23-serial-custom-size.json  24-serial-spool.json
testdata/policy/: 01-allow-query-status.json  02-allow-query-block.json  03-allow-safe-control-system-powerdown.json  04-deny-unknown-default.json  05-deny-screendump-name-gated-args-ignored.json  06-hard-deny-human-monitor-command.json  07-hard-deny-dump-guest-memory-args-ignored.json  08-hard-deny-device-add.json  09-hard-deny-blockdev-add-allow-override-ignored.json  10-hard-deny-migrate-allow-override-ignored.json  11-hard-deny-case-whitespace-evasion.json  12-allow-normalises-case-whitespace.json  13-override-allow-extends.json  14-override-deny-restricts.json  15-override-deny-wins-over-allow.json  16-hard-deny-outranks-both-allow-and-deny-override.json
testdata/store-name/: 01-valid-qcow2.json  02-valid-underscore-hyphen-dot.json  03-valid-single-char.json  04-valid-leading-digit.json  05-invalid-empty.json  06-invalid-whitespace-only.json  07-invalid-absolute-path.json  08-invalid-dot.json  09-invalid-dotdot.json  10-invalid-traversal.json  11-invalid-forward-separator.json  12-invalid-back-separator.json  13-invalid-leading-hyphen.json  14-invalid-comma-injection.json  15-invalid-space.json  16-invalid-colon.json
typescript/: .dockerignore  Dockerfile  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
typescript/src/: config.test.ts  config.ts  env-example.test.ts  index.test.ts  index.ts
typescript/src/instance/: event-buffer.test.ts  event-buffer.ts  hardware-spec.test.ts  hardware-spec.ts  iso-store.test.ts  iso-store.ts  orchestrator.test.ts  orchestrator.ts  store-path.ts
typescript/src/policy/: command-policy.test.ts  command-policy.ts
typescript/src/qemu/: fake-driver.ts  qemu-integration.test.ts  qmp-client.test.ts  qmp-client.ts
typescript/src/tools/: create-instance.ts  get-instance.ts  get-serial.ts  get-share.ts  list-block-devices.ts  pause-instance.ts  powerdown-instance.ts  qmp-execute.ts  read-serial.ts  reset-instance.ts  resume-instance.ts  screendump.ts  write-serial.ts
typescript/src/viewer/: viewer.test.ts  viewer.ts
typescript/test/: argv-parity.test.ts  policy-parity.test.ts  store-name-parity.test.ts
