[package]
name = "qmp-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "QEMU MCP server (Rust variant) — build, launch, drive, and tear down a single QEMU Instance over MCP. Second implementation of the shared qmp-mcp bounded context (see ../CONTEXT.md, ADR-0011)."
publish = false

[[bin]]
name = "qmp-mcp"
path = "src/main.rs"

[dependencies]
# Official MCP Rust SDK. The default features already enable `server` + `macros`
# (which is where the re-exported `schemars` and the `#[tool_router]`/`#[tool]`/
# `#[tool_handler]` macros come from); `transport-io` adds tokio's io-std so we can
# serve over stdio. Listed explicitly for intent even though some are on by default.
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
# `sync` gives the `tokio::sync::Mutex` behind the single-instance Orchestrator
# (ADR-0011); `signal` gives the SIGINT/SIGTERM teardown hook (ADR-0004). The QMP
# client + real driver (slice #21) add `net` (the QMP `UnixStream`), `process` (the
# `qemu-system-*` child), `time` (per-command timeouts + the dial/grace loops),
# `io-util` (newline framing over the socket), and `fs` (create the socket dir,
# probe the refuse-on-occupied check, remove the socket on teardown).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "net", "process", "time", "io-util", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pinned to the same major rmcp 0.16 depends on (1.x), so the tree resolves a
# single schemars version and a tool's `Json<T>` output schema never sees a skew.
schemars = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
# The single injectable seam is an `async_trait` QemuDriver (ADR-0011). Object-safe
# async trait methods so the Orchestrator can hold a `Box<dyn QemuDriver>` (real or
# fake). Already in the tree as a transitive rmcp dependency.
async-trait = "0.1"
# Only used by the real driver's teardown to send SIGTERM before SIGKILL (parity
# with the TS TERM-then-KILL grace), mirroring `../../src/qemu/real-driver.ts`.
# Already in the tree as a transitive tokio dependency.
libc = "0.2"
