[package]
name = "qmp-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "QEMU MCP server (Rust variant) — build, launch, drive, and tear down a single QEMU Instance over MCP. Second implementation of the shared qmp-mcp bounded context (see ../CONTEXT.md, ADR-0011)."
publish = false

[[bin]]
name = "qmp-mcp"
path = "src/main.rs"

[dependencies]
# Official MCP Rust SDK. The default features already enable `server` + `macros`
# (which is where the re-exported `schemars` and the `#[tool_router]`/`#[tool]`/
# `#[tool_handler]` macros come from); `transport-io` adds tokio's io-std so we can
# serve over stdio; `transport-streamable-http-server` adds the tower-based
# `StreamableHttpService` the HTTP transport is built on (slice #25, ADR-0005/0011).
# Listed explicitly for intent even though some are on by default.
rmcp = { version = "0.16", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
# `sync` gives the `tokio::sync::Mutex` behind the single-instance Orchestrator
# (ADR-0011); `signal` gives the SIGINT/SIGTERM teardown hook (ADR-0004). The QMP
# client + real driver (slice #21) add `net` (the QMP `UnixStream`), `process` (the
# `qemu-system-*` child), `time` (per-command timeouts + the dial/grace loops),
# `io-util` (newline framing over the socket), and `fs` (create the socket dir,
# probe the refuse-on-occupied check, remove the socket on teardown).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "net", "process", "time", "io-util", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The Command Policy's optional YAML override file (`QMP_MCP_POLICY_FILE`, ADR-0003),
# mirroring the TS server's `yaml` dependency. A maintained fork of the (archived)
# serde_yaml with the same API; `deny_unknown_fields` gives the strict typo-guard the
# TS `zod .strict()` provides. Only the policy loader touches it.
serde_yaml_ng = "0.10"
# Pinned to the same major rmcp 0.16 depends on (1.x), so the tree resolves a
# single schemars version and a tool's `Json<T>` output schema never sees a skew.
schemars = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
# The single injectable seam is an `async_trait` QemuDriver (ADR-0011). Object-safe
# async trait methods so the Orchestrator can hold a `Box<dyn QemuDriver>` (real or
# fake). Already in the tree as a transitive rmcp dependency.
async-trait = "0.1"
# Only used by the real driver's teardown to send SIGTERM before SIGKILL (parity
# with the TS TERM-then-KILL grace), mirroring `../../src/qemu/real-driver.ts`.
# Already in the tree as a transitive tokio dependency.
libc = "0.2"
# The HTTP transport's web stack (slice #25, ADR-0005/0011). rmcp's
# `StreamableHttpService` is a `tower_service::Service` over the `http` 1.x stack;
# axum 0.8 (the same major rmcp's own examples use) nests it under the configured
# endpoint and lets the fail-closed auth + DNS-rebinding guards sit in front as
# `middleware::from_fn` layers. The `ws` feature adds the browser-facing WebSocket
# upgrade the noVNC Viewer relays over (slice #26, ADR-0010). stdio needs none of
# this and does not pull it in.
axum = { version = "0.8", features = ["ws"] }
# The noVNC Viewer (slice #26, ADR-0010/0011): the vendored `@novnc/novnc` assets
# under `assets/novnc/` are EMBEDDED in the binary via `include_dir!` — traversal-safe
# by construction (a request can only resolve to an embedded file) and shipped in the
# binary for bare-metal parity, so there is no runtime asset directory to confine.
include_dir = "0.7"
# The Viewer's `ws <-> VNC-TCP` relay splits the axum `WebSocket` (a `Stream + Sink`)
# into its read/write halves so both directions relay concurrently with backpressure;
# `futures-util` provides `StreamExt::split`/`SinkExt`. Already in the tree as a
# transitive rmcp/axum dependency.
futures-util = "0.3"
# The axum WebSocket `Message::Binary` payload type; the relay wraps VNC bytes in it.
# Already in the tree as a transitive axum dependency.
bytes = "1"
# Cryptographically-secure randomness for the server-generated VNC Display password
# (ADR-0010): unbiased rejection sampling over the copy-safe alphabet, mirroring the
# TS orchestrator's `crypto.randomInt`. Already in the tree transitively; used
# directly here for the one password draw. No modulo bias.
getrandom = "0.4"
